# scrapper

./: .gitignore  LICENSE  README.md  requirements.txt  scrapper.py
.github/: CODEOWNERS
.github/workflows/: test.yml
examples/: advanced.json  simple.json
test/: CMakeLists.txt  CMakePresets.json  add.json  library.cpp  user.c  user.cpp
utils/: __init__.py  get_export_header.py  get_export_header_cpp_definition.py  get_function_signature_c.py  get_function_signature_cpp.py  get_impl.py  get_template_combinations.py  get_type_suffix.py  mapping.json  schema.json  suffix_mapping.json  utils.py  validate_schema.py
